# qunity

./: .dockerignore  .gitattributes  .gitignore  .ocamlformat  .ocamlinit  Dockerfile  LICENSE.txt  README.md  analyze_circuit.py  benchmarks  benchmarks_qiskit.py  compile-all-examples  compose.yaml  dune-project  qasm_analyze.py  qunity-compile  qunity-interact  qunity-run  qunity.opam  requirements.txt  run-all-examples  run-tests  run_all_examples.sh
_build/: log
examples/: add_const.qunity  adder.qunity  adder_in_ctrl.qunity  adder_in_match.qunity  adder_reversible.qunity  adjleft.qunity  adjleft_trit.qunity  adjright_trit.qunity  and.qunity  and_old.qunity  basis_change.qunity  bell_state.qunity  bell_state_cnot.qunity  binary_search_tree.qunity  bit0.qunity  bit1.qunity  bogosort.qunity  boolean_formula_walk.qunity  cnot.qunity  complex_pattern.qunity  complex_pattern1.qunity  complex_pattern2.qunity  const0_discard.qunity  controlled_h.qunity  ctrl_nested.qunity  ctrl_nested1.qunity  ctrl_nonexhaustive.qunity  ctrl_on_match.qunity  ctrl_pair.qunity  ctrl_share_pattern.qunity  deutsch_const0.qunity  deutsch_id.qunity  equal_superpos.qunity  equal_superpos_list.qunity  equal_superpos_trit.qunity  equal_superpos_trit_no_pmatch.qunity  fourier_transform.qunity  graph_coloring.qunity  grover.qunity  grover_bit_sort.qunity  (+33 more)
lib/: binary_tree.ml  circuit.ml  compilation.ml  compilation_unoptimized.ml  dune  extended_syntax.ml  gate.ml  gate_semantics.ml  lexer.mll  matrix.ml  metaprogramming.ml  parser.messages  parser.mly  parsing.ml  random_gen.ml  reals.ml  semantics.ml  syntax.ml  typechecking.ml  typechecking_old.ml  util.ml
qasm_out/: add_const.qasm  adder.qasm  adder_in_ctrl.qasm  adder_in_match.qasm  adder_reversible.qasm  adjleft.qasm  adjleft_trit.qasm  adjright_trit.qasm  and.qasm  basis_change.qasm  bit0.qasm  (+55 more)
test/: dune  test_binary_tree.ml  test_compilation.ml  test_semantics.ml  test_typechecking.ml  unit_test_binary_tree.ml  unit_test_compilation.ml  unit_test_metaprogramming.ml  unit_test_util.ml
test/testing_utils/: dune  testing_utils.ml
(+34 files in other folders)
