(library
 (name qunity)
 (modules
  util
  reals
  syntax
  typechecking
  matrix
  semantics
  extended_syntax
  gate
  compilation
  gate_semantics
  parser
  lexer
  parser_messages
  parsing)
 (libraries num menhirLib))

(menhir
 (modules parser)
 (flags --table))

(ocamllex lexer)

(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
