(library
 (name qunity)
 (public_name qunity)
 (modules
  util
  reals
  syntax
  typechecking
  typechecking_old
  matrix
  semantics
  metaprogramming
  gate
  binary_tree
  compilation
  compilation_unoptimized
  gate_semantics
  parser
  lexer
  parser_messages
  parsing)
 (libraries num menhirLib))

(menhir
 (modules parser)
 (flags --table))

(ocamllex lexer)

(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
